[BugTrapSort] Updated .ini-file.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8544 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=shareaza.exe:F4B0|shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll|ATIPDLXX.DLL
+ignore=shareaza.exe:78CF|shareaza.exe:43D4|shareaza.exe:41F5|shareaza.exe:7C4D|shareaza.exe:48E3|shareaza.exe:4783|shareaza.exe:7b65|shareaza.exe:F4B0|shareaza.exe:1F1A|shareaza.exe:4F07|shareaza.exe:28A4|shareaza.exe:29A3|shareaza.exe:2A6B|shareaza.exe:1C78|shareaza.exe:7BA4|shareaza.exe:4A7E|shareaza.exe:4579|shareaza.exe:8b73|shareaza.exe:78F1|shareaza.exe:46BF|shareaza.exe:7789|shareaza.exe:EB4E|shareaza.exe:EBF4|shareaza.exe:44C7|shareaza.exe:7F22|shareaza.exe:B7B4|shareaza.exe:B913|shareaza.exe:B9E6|shareaza.exe:7E3A|shareaza.exe:D025|shareaza.exe:D08C|shareaza.exe:A8F6|shareaza.exe:4A55|shareaza.exe:483C|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|COMCTL32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|DUser.dll|ATIPDLXX.DLL
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -61,6 +61,11 @@ output=C:\Projects\Shareaza\crashes\fixed\CMatchCtrl ScrollTo\{VER_NUMBER}\{TIME
 if={VER_NUMBER} {ADDRESS} {MODULE}
 is=2.5.2.0 2ca3 shareaza.exe
 output=C:\Projects\Shareaza\crashes\fixed\CBuffer EnsureBuffer\{VER_NUMBER}\{TIMESTAMP}
+
+[CFragmentedFile::Open]
+if={VER_NUMBER} {ADDRESS} {MODULE}
+is=2.5.2.0 0c58 shareaza.exe
+output=C:\Projects\Shareaza\crashes\fixed\CFragmentedFile Open\{VER_NUMBER}\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Fixed 2.5.1.0
